--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "trackable-video",
   "version": "0.1.0",
-  "private": false,
+  "main": "lib/index.js",
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
